--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "servor": "^4.0.2",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0"
+  },
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
