--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "Juan Carlos Jiménez Gutiérrez <jcjimenez29@misena.edu.co>",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-react": "^7.12.1",
+    "babel-loader": "^8.1.0",
     "servor": "^4.0.2",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0"
