--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
+    "@babel/plugin-syntax-optional-chaining": "^7.8.3",
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
     "servor": "^4.0.2",
