--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Learning Webpack",
   "main": "index.js",
   "scripts": {
-    "start": "servor ./dist index.html 8082 --reload --browse",
+    "start": "webpack serve --mode development --env development",
     "build": "webpack ./src/js --mode production",
-    "dev": "webpack ./src/js --mode development --watch"
+    "dev": "webpack ./src/js --mode development"
   },
   "keywords": [
     "webpack",
@@ -22,9 +22,9 @@
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
     "html-webpack-plugin": "^4.5.0",
-    "servor": "^4.0.2",
     "webpack": "^5.3.2",
-    "webpack-cli": "^4.1.0"
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "react": "^17.0.1",
